# Firedrake-Goal-Adaptive-Solvers

./: .gitignore  Conference Presentation.pptx  Conference Presentation2.pptx  L_shape.vol  README.md  adaptive.py  adaptive_mesh.py  adaptive_mesh_example.py  adaptive_new.py  adaptive_transfer_manager.py  adaptivemesh_unrefined.pvd  bubble.py  bubble_func.py  bubbles.py  compare_dwr.py  cube_hole.vol  eigen_solver_ctx.py  firedrake_mesh.pvd  getlabels.py  goal_adaptivity.py  goaladadaptiveeigensolver.py  goaladadaptiveeigensolver_complex.py  maxwell_example.py  maxwell_example_complex.py  netgen_mesh.pvd  notes.txt  poisson.py  poisson_example.py  poisson_example2D.py  pyproject.toml  residual_estimator.py  results_2Db.csv  solver_ctx.py  stokes_example.py
GoalAdaptiveEigenSolver/: adaptive-eigensolver.py
GoalAdaptiveNonlinearSolver/: goal_adaptive_solver.py
GoalAdaptiveNonlinearVariationalSolver/: adaptive-solver.py
adaptivemesh_unrefined/: adaptivemesh_unrefined_0.vtu
algorithm/: __init__.py  goal_adaptivity.py  goaladadaptiveeigensolver.py  mesh_ctx.py  (+3 more)
pefarrell-defcon-1aac899b13a4/: bitbucket-pipelines.yml  pyproject.toml  setup.py
pefarrell-defcon-1aac899b13a4/.circleci/: config.yml
pefarrell-defcon-1aac899b13a4/defcon/: __init__.py  arclength.py  bifurcationproblem.py  dwr.py  journal.py  variationalinequalities.py  worker.py
pefarrell-defcon-1aac899b13a4/docker/: Dockerfile
pefarrell-defcon-1aac899b13a4/examples/fenics/wingedcusp/: wingedcusp.py:Zone.Identifier
pefarrell-defcon-1aac899b13a4/examples/firedrake/allen-cahn/: allen-cahn.py
(+139 files in other folders)
